--- a/globalStyle.css
+++ b/globalStyle.css
@@ -12,7 +12,7 @@
 }
 
 a {
-	color: white;
+	color: rgb(255, 255, 255);
 }
 
 body {
@@ -27,13 +27,14 @@ body {
 
 .wrapper {
 	padding: 12px;
+	padding-top: 10px;
 }
 
 header {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	margin-bottom: 16px;
+	margin: 0px 12px 0px 12px;
 }
 
 header p {
@@ -51,14 +52,37 @@ header nav {
 header ul {
 	display: flex;
 	list-style: none;
-	gap: 16px;
 }
 
-header ul li:hover {
-	color: rgb(169, 169, 169);
+header li {
+	background-color: green;
+	padding: 18px 0px;
+}
+
+header li:hover {
+	background-color: rgb(122, 231, 189);	
+}
+
+header li a:hover {
+	color: rgb(0, 0, 0);
 	transform: scale(1.1);
 	transition: 0.5s;
 	cursor: pointer;
+	background-color: rgb(122, 231, 189);
+	
+}
+
+a {
+	padding: 18px 8px;
+	border-radius: 10px 10px 10px 10px;
+}
+
+#about-btn {
+	border-radius: 10px 0px 0px 10px;
+}
+
+#contact-btn {
+	border-radius: 0px 10px 10px 0px;
 }
 
 .btn-register {
