--- a/globalStyle.css
+++ b/globalStyle.css
@@ -73,16 +73,16 @@ header li a:hover {
 }
 
 a {
-	padding: 18px 8px;
-	border-radius: 10px 10px 10px 10px;
+	padding: 18px 10px;
+	border-radius: 50%;
 }
 
 #about-btn {
-	border-radius: 10px 0px 0px 10px;
+	border-radius: 30px 0px 0px 30px;
 }
 
 #contact-btn {
-	border-radius: 0px 10px 10px 0px;
+	border-radius: 0px 30px 30px 0px;
 }
 
 .btn-register {
